--- a/src/AppFunc.Examples.PartialApplicationComposition/AppFunc.Examples.PartialApplicationComposition.csproj
+++ b/src/AppFunc.Examples.PartialApplicationComposition/AppFunc.Examples.PartialApplicationComposition.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C0F11F1B-AE2C-4655-951B-B5593D9373A3}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{696A7029-1556-4739-AD7E-0ECC8ADCBB6D}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AppFunc.CommonServiceLocator</RootNamespace>
-    <AssemblyName>AppFunc.CommonServiceLocator</AssemblyName>
+    <RootNamespace>AppFunc.Examples.PartialApplicationComposition</RootNamespace>
+    <AssemblyName>AppFunc.Examples.PartialApplicationComposition</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.ServiceLocation">
-      <HintPath>..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,14 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommonServiceLocatorConfigurationExtensions.cs" />
-    <Compile Include="CommonServiceLocatorDependencyResolver.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AppFunc.Examples.Shared\AppFunc.Examples.Shared.csproj">
+      <Project>{e8bbd04e-bc2f-4b48-8bdc-c697d6814aed}</Project>
+      <Name>AppFunc.Examples.Shared</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AppFunc\AppFunc.csproj">
       <Project>{f3080fa9-cac1-4b5e-b7a2-dd305e5bb0e5}</Project>
       <Name>AppFunc</Name>
