--- a/src/AppFunc.Examples.Shared/AppFunc.Examples.Shared.csproj
+++ b/src/AppFunc.Examples.Shared/AppFunc.Examples.Shared.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C0F11F1B-AE2C-4655-951B-B5593D9373A3}</ProjectGuid>
+    <ProjectGuid>{E8BBD04E-BC2F-4B48-8BDC-C697D6814AED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AppFunc.CommonServiceLocator</RootNamespace>
-    <AssemblyName>AppFunc.CommonServiceLocator</AssemblyName>
+    <RootNamespace>AppFunc.Examples.Shared</RootNamespace>
+    <AssemblyName>AppFunc.Examples.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.ServiceLocation">
-      <HintPath>..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,16 +39,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommonServiceLocatorConfigurationExtensions.cs" />
-    <Compile Include="CommonServiceLocatorDependencyResolver.cs" />
+    <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="Data\InMemoryUserRepository.cs" />
+    <Compile Include="Domain\CreateUserRequest.cs" />
+    <Compile Include="Domain\GetUserRequest.cs" />
+    <Compile Include="Domain\IUserRepository.cs" />
+    <Compile Include="Domain\User.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UserService.cs" />
+    <Compile Include="Services\UserServiceModule.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\AppFunc\AppFunc.csproj">
-      <Project>{f3080fa9-cac1-4b5e-b7a2-dd305e5bb0e5}</Project>
+      <Project>{F3080FA9-CAC1-4B5E-B7A2-DD305E5BB0E5}</Project>
       <Name>AppFunc</Name>
     </ProjectReference>
   </ItemGroup>
