--- a/src/AppFunc.Examples.Unity/AppFunc.Examples.Unity.csproj
+++ b/src/AppFunc.Examples.Unity/AppFunc.Examples.Unity.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C0F11F1B-AE2C-4655-951B-B5593D9373A3}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{D0673DF3-1AC3-491C-B0D3-23013E5629B8}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AppFunc.CommonServiceLocator</RootNamespace>
-    <AssemblyName>AppFunc.CommonServiceLocator</AssemblyName>
+    <RootNamespace>AppFunc.Examples.Unity</RootNamespace>
+    <AssemblyName>AppFunc.Examples.Unity</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,8 +32,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.ServiceLocation">
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity">
+      <HintPath>..\..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>..\..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
+      <HintPath>..\..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.ServiceLocatorAdapter">
+      <HintPath>..\..\packages\CommonServiceLocator.UnityAdapter.1.0.0.41670\lib\net35\Microsoft.Practices.Unity.ServiceLocatorAdapter.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,14 +57,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommonServiceLocatorConfigurationExtensions.cs" />
-    <Compile Include="CommonServiceLocatorDependencyResolver.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AppFunc.CommonServiceLocator\AppFunc.CommonServiceLocator.csproj">
+      <Project>{c0f11f1b-ae2c-4655-951b-b5593d9373a3}</Project>
+      <Name>AppFunc.CommonServiceLocator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AppFunc.Examples.Shared\AppFunc.Examples.Shared.csproj">
+      <Project>{e8bbd04e-bc2f-4b48-8bdc-c697d6814aed}</Project>
+      <Name>AppFunc.Examples.Shared</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AppFunc\AppFunc.csproj">
       <Project>{f3080fa9-cac1-4b5e-b7a2-dd305e5bb0e5}</Project>
       <Name>AppFunc</Name>
