--- a/src/AppFunc.Examples.SimpleInjector/AppFunc.Examples.SimpleInjector.csproj
+++ b/src/AppFunc.Examples.SimpleInjector/AppFunc.Examples.SimpleInjector.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F3080FA9-CAC1-4B5E-B7A2-DD305E5BB0E5}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{B1842AF9-46D2-4C1F-8B2B-B8358C28AFB3}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AppFunc</RootNamespace>
-    <AssemblyName>AppFunc</AssemblyName>
+    <RootNamespace>AppFunc.Examples.SimpleInjector</RootNamespace>
+    <AssemblyName>AppFunc.Examples.SimpleInjector</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -21,18 +21,29 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommonServiceLocator.SimpleInjectorAdapter">
+      <HintPath>..\..\packages\CommonServiceLocator.SimpleInjectorAdapter.2.5.2\lib\portable-net4+sl4+wp8+win8\CommonServiceLocator.SimpleInjectorAdapter.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\..\packages\SimpleInjector.2.5.2\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector.Diagnostics">
+      <HintPath>..\..\packages\SimpleInjector.2.5.2\lib\net45\SimpleInjector.Diagnostics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,24 +53,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppDispatcher.cs" />
-    <Compile Include="Configuration\AppDispatcherConfigurator.cs" />
-    <Compile Include="Configuration\AppMediatorFactory.cs" />
-    <Compile Include="Configuration\Internal\LambdaAsyncRequestHandler.cs" />
-    <Compile Include="Configuration\Internal\LambdaAsyncRequestResponseHandler.cs" />
-    <Compile Include="Configuration\Internal\LambdaRequestHandler.cs" />
-    <Compile Include="Configuration\Internal\LambdaRequestResponseHandler.cs" />
-    <Compile Include="Configuration\Internal\Unit.cs" />
-    <Compile Include="Configuration\IAppDispatcherConfigurator.cs" />
-    <Compile Include="Configuration\IDependencyResolver.cs" />
-    <Compile Include="Configuration\LambdaDecoratorHelpers.cs" />
-    <Compile Include="IHandlers.cs" />
-    <Compile Include="IMessages.cs" />
-    <Compile Include="IAppDispatcher.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Configuration\RequestDispatcher.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AppFunc.CommonServiceLocator\AppFunc.CommonServiceLocator.csproj">
+      <Project>{c0f11f1b-ae2c-4655-951b-b5593d9373a3}</Project>
+      <Name>AppFunc.CommonServiceLocator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AppFunc.Examples.Shared\AppFunc.Examples.Shared.csproj">
+      <Project>{E8BBD04E-BC2F-4B48-8BDC-C697D6814AED}</Project>
+      <Name>AppFunc.Examples.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AppFunc\AppFunc.csproj">
+      <Project>{f3080fa9-cac1-4b5e-b7a2-dd305e5bb0e5}</Project>
+      <Name>AppFunc</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
