updated SimpleInjector example

--- a/src/AppFunc.Examples.Shared/AppFunc.Examples.Shared.csproj
+++ b/src/AppFunc.Examples.Shared/AppFunc.Examples.Shared.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Domain\IUserRepository.cs" />
     <Compile Include="Domain\User.cs" />
     <Compile Include="ILogger.cs" />
+    <Compile Include="LoggingDecorator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\UserServiceModule.cs" />
