misc refactoring and updating examples

--- a/src/AppFunc.Examples.Shared/AppFunc.Examples.Shared.csproj
+++ b/src/AppFunc.Examples.Shared/AppFunc.Examples.Shared.csproj
@@ -41,7 +41,7 @@
   <ItemGroup>
     <Compile Include="ConsoleLogger.cs" />
     <Compile Include="Data\InMemoryUserRepository.cs" />
-    <Compile Include="Domain\CreateUserRequest.cs" />
+    <Compile Include="Domain\CreateUser.cs" />
     <Compile Include="Domain\GetUserRequest.cs" />
     <Compile Include="Domain\IUserRepository.cs" />
     <Compile Include="Domain\User.cs" />
