--- a/src/AppFunc.Tests/packages.config
+++ b/src/AppFunc.Tests/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="CommonServiceLocator.StructureMapAdapter.Unofficial" version="3.0.4.125" targetFramework="net45" />
+  <package id="CommonServiceLocator.UnityAdapter" version="1.0.0.41670" targetFramework="net45" />
   <package id="Shouldly" version="2.2.0" targetFramework="net45" />
+  <package id="structuremap" version="3.0.4.125" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
 </packages>
